--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <!-- This placeholder image represents the first image resource (justin1) -->
                 <div class="md:w-1/2 flex justify-center">
-                    <img src="\JustinBieberFanPage\resources\justin1.jpg" alt="Justin Bieber smiling" class="rounded-xl shadow-lg w-full md:w-auto h-auto object-cover">
+                    <img src="\resources\justin1.jpg" alt="Justin Bieber smiling" class="rounded-xl shadow-lg w-full md:w-auto h-auto object-cover">
                 </div>
             </section>
 
@@ -61,12 +61,12 @@
                 <div class="relative w-full max-w-3xl mx-auto rounded-xl shadow-lg overflow-hidden">
                     <!-- Slideshow images - these represent the user's specified resources -->
                     <!-- I'm using placeholder images to simulate the user's local files (justin1.jpg, etc) -->
-                    <img src="\JustinBieberFanPage\resources\justin1.jpg" class="slide-image w-full active" alt="Justin Bieber photo 1">
-                    <img src="\JustinBieberFanPage\resources\justin2.jpg" class="slide-image w-full" alt="Justin Bieber photo 2">
-                    <img src="\JustinBieberFanPage\resources\justin3.jpg" class="slide-image w-full" alt="Justin Bieber photo 3">
-                    <img src="\JustinBieberFanPage\resources\justin4.jpg" class="slide-image w-full" alt="Justin Bieber photo 4">
-                    <img src="\JustinBieberFanPage\resources\justin5.jpg" class="slide-image w-full" alt="Justin Bieber photo 5">
-                    <img src="\JustinBieberFanPage\resources\justin6.jpg" class="slide-image w-full" alt="Justin Bieber photo 6">
+                    <img src="\resources\justin1.jpg" class="slide-image w-full active" alt="Justin Bieber photo 1">
+                    <img src="\resources\justin2.jpg" class="slide-image w-full" alt="Justin Bieber photo 2">
+                    <img src="\resources\justin3.jpg" class="slide-image w-full" alt="Justin Bieber photo 3">
+                    <img src="\resources\justin4.jpg" class="slide-image w-full" alt="Justin Bieber photo 4">
+                    <img src="\resources\justin5.jpg" class="slide-image w-full" alt="Justin Bieber photo 5">
+                    <img src="\resources\justin6.jpg" class="slide-image w-full" alt="Justin Bieber photo 6">
 
                     <!-- Slideshow navigation buttons -->
                     <button id="prevBtn" class="absolute top-1/2 left-4 transform -translate-y-1/2 bg-white text-gray-800 p-3 rounded-full shadow-lg hover:bg-gray-200 transition-all duration-300 focus:outline-none">
